@@ -10,9 +10,9 @@ WriteMakefile
      , Scalar::Util  => 1.13
      , Math::Trig    => 0
      }
-  , AUTHOR      => 'Mark Overmeer'
+  , AUTHOR      => 'Mark Overmeer <markov@cpan.org>'
   , ABSTRACT    => 'basic polygon calculations'
-  , LICENSE     => 'perl'
+  , LICENSE     => 'perl_5'
 
   , META_MERGE =>
       { 'meta-spec' => { version => 2 }
@@ -22,9 +22,9 @@ WriteMakefile
               , url  => 'https://github.com/markov2/perl5-Math-Polygon.git'
               , web  => 'https://github.com/markov2/perl5-Math-Polygon'
               }
+          , homepage => 'http://perl.overmeer.net/CPAN/'
+          , license  => [ 'http://dev.perl.org/licenses/' ]
           }
-      , homepage => 'http://perl.overmeer.net/CPAN/'
-      , license  => [ 'http://dev.perl.org/licenses/' ]
       }
   );
 
