@@ -1,4 +1,4 @@
-# Math::Polygon
+# distribution Math-Polygon
 
   * My extended documentation: <http://perl.overmeer.net/CPAN/>
   * Development via GitHub: <https://github.com/markov2/perl5-Math-Polygon>
