@@ -1,10 +1,16 @@
-Revision history for Perl extension Math::Polygon
+== Revision history for Perl extension Math::Polygon
+
+All changes are made by Mark Overmeer <markov@cpan.org> unless
+explicitly stated differently.
 
 20070425 Request by Christian Sauer: polygon intersection
    paper with nice algorithm: http://citeseer.ist.psu.edu/cache/papers/cs/25021/http:zSzzSzfractal.dam.fmph.uniba.skzSz~sccgzSzproceedingszSz1998zSzZalik.pdf/zalik98quick.pdf
 20121024 Request by Rick Rutgers: widening polygon contour
 
 version 1.11:
+
+	Fixes:
+	- fix metadata [Mohammad S Anwar]
 
 	Improvements:
 	- link to github distributions in meta-data.
